ADDED the new functionality mainly relates to costs and account balances from the account

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,11 @@
             </intent-filter>
         </activity>
         <activity android:name=".AddAccountBookActivity"></activity>
+
         <activity android:name=".AddCost"></activity>
+
+        <activity android:name=".AddCategoryActivity"></activity>
+
     </application>
 
 </manifest>
