AccoutnUserActivity branch with out interface ONE commit

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
         <activity android:name=".AddCost"></activity>
 
         <activity android:name=".AddCategoryActivity"></activity>
+        <activity android:name=".InfoAccountBookActivity"></activity>
 
     </application>
 
