--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,8 +10,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        android:theme="@style/AppTheme" >
+        <activity
+            android:name=".MainActivity"
+            android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -20,10 +22,18 @@
         </activity>
         <activity android:name=".AddAccountBookActivity"></activity>
 
-        <activity android:name=".AddCost"></activity>
+        <activity android:name=".AddCost" android:theme="@style/CostStyle"
+            android:label="Расход">
+
+        </activity>
+        <activity android:name=".AddIncom" android:theme="@style/IncomStyle"
+            android:label="Приход">
+
+        </activity>
 
         <activity android:name=".AddCategoryActivity"></activity>
         <activity android:name=".InfoAccountBookActivity"></activity>
+
 
     </application>
 
